--- a/frontend/tips/12-opt-out-of-ab-tests/_ruby.mdx
+++ b/frontend/tips/12-opt-out-of-ab-tests/_ruby.mdx
@@ -57,7 +57,7 @@ run do
 end
 ```
 
-Here we first navigate to the main page of the site and then add the opt-out cookie. After that, we navigate to the split test page and perform our checks. Alternatively, we could opt out without forging a cookie. Instead we would need to append an opt out request to the URL.
+Here we first navigate to the main page of the site and then add the opt-out cookie. After that, we navigate to the split test page and perform our checks. Alternatively, we could opt out without forging a cookie. Instead, we would need to append an opt out request to the URL.
 
 ```ruby
 run do
