--- a/frontend/tips/15-download-secure-files/_ruby.mdx
+++ b/frontend/tips/15-download-secure-files/_ruby.mdx
@@ -25,7 +25,7 @@ def run
 end
 ```
 
-Next we'll write our test. In it we'll want to access a page of download links that is behind some form of authentication (Basic HTTP Authentication in this case).
+Next we'll write our test. In it, we'll want to access a page of download links that is behind some form of authentication (Basic HTTP Authentication in this case).
 
 ```ruby
 run do
