--- a/frontend/tips/17-retrieve-http-status-codes/_ruby.mdx
+++ b/frontend/tips/17-retrieve-http-status-codes/_ruby.mdx
@@ -19,7 +19,7 @@ include RSpec::Matchers
 require 'browsermob/proxy'
 ```
 
-Now let's create a method to prepare the proxy for use with Selenium. In it we start the proxy server, configure a browser profile to use it (for Firefox in this case), and return the profile object.
+Now let's create a method to prepare the proxy for use with Selenium. In it, we start the proxy server, configure a browser profile to use it (for Firefox in this case), and return the profile object.
 
 ```ruby
 def configure_proxy
@@ -101,6 +101,6 @@ If you save this file and run it (e.g., `ruby status_codes.rb` from the command-
 
 ## Summary
 
-This tip was inspired by [Jim Evans'](https://twitter.com/jimevansmusic) multi-part blog post series on doing the same thing in C# with Fiddler ([1](http://jimevansmusic.blogspot.com/2013/08/implementing-webdriver-http-status.html), [2](http://jimevansmusic.blogspot.com/2013/08/implementing-http-status-codes-in.html), [3](http://jimevansmusic.blogspot.com/2013/08/implementing-http-status-codes-in_17.html)) which was in response to [Selenium Issue 141](https://code.google.com/p/selenium/issues/detail?id=141). Thanks Jim!
+This tip was inspired by [Jim Evans'](https://twitter.com/jimevansmusic) multi-part blog post series on doing the same thing in C# with Fiddler ([1](http://jimevansmusic.blogspot.com/2013/08/implementing-webdriver-http-status.html), [2](http://jimevansmusic.blogspot.com/2013/08/implementing-http-status-codes-in.html), [3](http://jimevansmusic.blogspot.com/2013/08/implementing-http-status-codes-in_17.html)) which was in response to [Selenium Issue 141](https://code.google.com/p/selenium/issues/detail?id=141). Thanks, Jim!
 
 Happy Testing!
