--- a/frontend/tips/18-how-to-figure-out-what-to-test/main.mdx
+++ b/frontend/tips/18-how-to-figure-out-what-to-test/main.mdx
@@ -80,14 +80,14 @@ in the backlog item that this has been an issue in the past. If the issue has ha
 potential to occur again, move the item up in the backlog priority.
 
 If issues keep cropping up that are related to a specific browser, compare this browser to your short list from
-question #3. If it's a browser that's not in your list but it's a small pocket of high value users, track it on
+question #3. If it's a browser that's not in your list, but it's a small pocket of high value users, track it on
 the backlog but put it at the bottom.
 
 ## Now You Are Ready
 
 Having answered these questions you should now have a prioritized backlog of critical functionality that's backed
 up by usage data, a short list of browsers to focus on, and an understanding of the risky parts of your application.
-With it you can make sure you are on the right track with your test automation (regardless if you're just getting
+With it, you can make sure you are on the right track with your test automation (regardless if you're just getting
 started with test automation or already have a mature test automation practice).
 
 ## Summary
