--- a/frontend/tips/2-download-a-file/_ruby.mdx
+++ b/frontend/tips/2-download-a-file/_ruby.mdx
@@ -16,7 +16,7 @@ download directory, and `fileutils` to create & destroy the temp directory) and 
 ### Setup and Teardown
 
 Lines 8 to 24 are setting up and tearing down the test. Our `setup` method is where the magic is happening in this
-example. In it we're creating a uniquely named temp directory and storing the absolute path of it in an instance
+example. In it, we're creating a uniquely named temp directory and storing the absolute path of it in an instance
 variable that we'll use throughout this file.
 
 We're also setting a few browser preferences (for Firefox in this case) and plying it with the necessary configuration
