--- a/frontend/tips/22-locator-strategy/_ruby.mdx
+++ b/frontend/tips/22-locator-strategy/_ruby.mdx
@@ -55,7 +55,7 @@ run do
   puts link
 end
 ```
-Note the `css: '#content a'`. The `#content` is a selector for an HTML element with `id="content"`. With it we are able to chain together the previously used `a` (separated by spaces) to grab the first link from within the content div on the page.
+Note the `css: '#content a'`. The `#content` is a selector for an HTML element with `id="content"`. With it, we are able to chain together the previously used `a` (separated by spaces) to grab the first link from within the content div on the page.
 
 ## Example 3
 
@@ -98,7 +98,7 @@ You can find a full list of CSS Selectors [here](http://www.w3schools.com/cssref
 
 ## Summary
 
-In a perfect world all pages would be written with sound markup and uniquely named bits but that's more the exception than the rule. So, you will likely find as you dig into automating various sites that things will not be as straightforward as the examples above. There are some circumstances where you have a selector dialed in but you hit issues with older browsers.
+In a perfect world all pages would be written with sound markup and uniquely named bits but that's more the exception than the rule. So, you will likely find as you dig into automating various sites that things will not be as straightforward as the examples above. There are some circumstances where you have a selector dialed in, but you hit issues with older browsers.
 
 As far as finding CSS Selectors, the simplest way to find them is to inspect the elements on a page. The best way to do this is from within your web browser. Fortunately popular browsers of today come pre-loaded with development tools that make this simple to accomplish.
 
