--- a/frontend/tips/23-dynamic-pages/_ruby.mdx
+++ b/frontend/tips/23-dynamic-pages/_ruby.mdx
@@ -26,7 +26,7 @@ def run
 end
 ```
 
-Now we can create our first test. In it we'll visit the page, click the start button, wait for the finish text to appear, and assert that it appeared.
+Now we can create our first test. In it, we'll visit the page, click the start button, wait for the finish text to appear, and assert that it appeared.
 
 ```ruby
 run do
