--- a/frontend/tips/24-rest-apis/_ruby.mdx
+++ b/frontend/tips/24-rest-apis/_ruby.mdx
@@ -132,7 +132,7 @@ Indeed, there are many great reasons to consider pure REST API tests to suppleme
 * Simpler execution architecture.
 * More encouraging of testable design in the application
 
-REST API tests are very appropriate for exercising the business logic that powers an application. Of course they leave a lot of important parts of the application untested including Javascript within the website, thus they should never be considered a complete Selenium replacement.
+REST API tests are very appropriate for exercising the business logic that powers an application. Of course, they leave a lot of important parts of the application untested including Javascript within the website, thus they should never be considered a complete Selenium replacement.
 
 __Note: Given the ever increasing important of mobile applications, I believe special mention concerning the testing of a mobile application is important here. There are several Selenium like tools for mobile testing out there, but the landscape is still quite immature. Fortunately, the majority of most mobile applications are in fact backed by a REST API. Pure REST API testing should be considered an important component of any test plan for every mobile application!__
 
