--- a/frontend/tips/27-parallel/_ruby.mdx
+++ b/frontend/tips/27-parallel/_ruby.mdx
@@ -25,7 +25,7 @@ This way you can run parts of your test suite as needed, and the results will be
 
 At the heart of every testing framework is a test runner that does a lot of the heavy lifting (e.g. test group execution, easy global configuration for setup and teardown, reporting, etc.).
 
-So rather than reinvent the wheel, you can use one of the many that already exists (there's more than one for every language). And with it you can bolt on third party libraries to extend it's functionality if there's something missing -- like parallelization.
+So rather than reinvent the wheel, you can use one of the many that already exists (there's more than one for every language). And with it, you can bolt on third party libraries to extend it's functionality if there's something missing -- like parallelization.
 
 
 ## Example
