--- a/frontend/tips/27-parallel/main.mdx
+++ b/frontend/tips/27-parallel/main.mdx
@@ -27,7 +27,7 @@ hampering your ability to get fast feedback.
 
 Rather than run your tests in series (which is what you get out of the box with Selenium) you can dramatically speed
 things up by running them in parallel. Couple this with
-[the ability to run your tests in any browser](https://elementalselenium.com/docs/cloud/26-cloud) and you're on to
+[the ability to run your tests in any browser](https://elementalselenium.com/docs/cloud/26-cloud), and you're on to
 some solid footing with your test automation.
 
 But keep in mind that doing this requires some consideration into how you structure your tests, but the pay off is
