--- a/frontend/tips/29-chrome-driver/_csharp.mdx
+++ b/frontend/tips/29-chrome-driver/_csharp.mdx
@@ -35,7 +35,7 @@ public class Chrome
 // ...
 ```
 
-Notice the field variable declaration for `VendorDirectory`. With it we are effectively grabbing the full path of the project directory and appending the `Vendor` directory to it. This is then put to use when creating an instance of Chrome (e.g., `Driver = new ChromeDriver(VendorDirectory);`).
+Notice the field variable declaration for `VendorDirectory`. With it, we are effectively grabbing the full path of the project directory and appending the `Vendor` directory to it. This is then put to use when creating an instance of Chrome (e.g., `Driver = new ChromeDriver(VendorDirectory);`).
 
 Now we're ready to add a test.
 
