--- a/frontend/tips/30-mobile/_ruby.mdx
+++ b/frontend/tips/30-mobile/_ruby.mdx
@@ -50,7 +50,7 @@ end
 ```
 
 Note that in `setup` we configure our capabilities by setting them to a hash and storing them in a variable called 
-`caps`. In it we are specifying the platform we would like (`Mac 10.8`), the iOS version (`6.1`), the device 
+`caps`. In it, we are specifying the platform we would like (`Mac 10.8`), the iOS version (`6.1`), the device 
 (`iPhone Simulator`), and the app we would like to load (zipped up and served from AWS).
 
 We then instantiate Selenium Remote in a `@driver` object; pointing it at Sauce Labs, and passing in our desired 
