--- a/frontend/tips/32-css-vs-xpath/_ruby.mdx
+++ b/frontend/tips/32-css-vs-xpath/_ruby.mdx
@@ -55,7 +55,7 @@ Based on the data, XPath looks more favorable than it once was.
 
 ## Some Additional Food For Thought
 
-Not being able to traverse the DOM with CSS in older browsers isn't necessarily a bad thing. To me it's more of an 
+Not being able to traverse the DOM with CSS in older browsers isn't necessarily a bad thing. To me, it's more of an 
 indicator that your page has poor design and could benefit from some helpful markup. I outline an approach 
 in [a previous tip](https://elementalselenium.com/docs/how-to-work-with-tables/25-tables) under the heading 
 "But What About Older Browsers?".
