--- a/frontend/tips/36-available-resources/main.mdx
+++ b/frontend/tips/36-available-resources/main.mdx
@@ -63,7 +63,7 @@ below in the Books section.
 
 + [Hands-On Selenium WebDriver with Java - The Book](https://www.oreilly.com/library/view/hands-on-selenium-webdriver/9781098109998/)
 
-This book is by [Boni Garcia](https://twitter.com/boni_gg) and it is a thorough resource. It outlines how to use Selenium, top-to-bottom,
+This book is by [Boni Garcia](https://twitter.com/boni_gg), and it is a thorough resource. It outlines how to use Selenium, top-to-bottom,
 using Java, and is a great resource to keep handy.
 
 ### Meetups
