--- a/frontend/tips/40-disabled-element/main.mdx
+++ b/frontend/tips/40-disabled-element/main.mdx
@@ -21,7 +21,7 @@ category:
 
 ## Intro
 
-On occasion you may have the need to check if an element on a page is disabled or enabled. Unfortunately, this is not
+On occasion, you may have the need to check if an element on a page is disabled or enabled. Unfortunately, this is not
 a well-documented function of Selenium, so doing a trivial action like this can quickly become a pain.
 
 ## A Solution
