--- a/frontend/tips/52-grid/main.mdx
+++ b/frontend/tips/52-grid/main.mdx
@@ -20,7 +20,7 @@ category:
 
 ## Intro
 
-If you're looking to run your tests on different browser and operating system combinations but you're unable to
+If you're looking to run your tests on different browser and operating system combinations, but you're unable to
 justify using a third-party solution like [Sauce Labs](https://saucelabs.com/) then what do you do?
 
 ## A Solution
