--- a/frontend/tips/64-limit-bandwidth/main.mdx
+++ b/frontend/tips/64-limit-bandwidth/main.mdx
@@ -18,7 +18,7 @@ category:
 
 ## Intro
 
-With Selenium you have the luxury of cross browser testing. But what happens when you also need to test how
+With Selenium, you have the luxury of cross browser testing. But what happens when you also need to test how
 your application behaves on a _slow_ connection?
 
 ## A Solution
