--- a/frontend/tips/67-broken-images/_ruby.mdx
+++ b/frontend/tips/67-broken-images/_ruby.mdx
@@ -112,7 +112,7 @@ If you save this file and run it (e.g., `ruby broken_images_2.rb` from the comma
 + Assert that the status code is `200`
 + Close the browser
 
-By using an HTTP library we get the same outcome as we saw with a proxy server. There are additional requests being made but it's substantially faster since it has less overhead.
+By using an HTTP library we get the same outcome as we saw with a proxy server. There are additional requests being made, but it's substantially faster since it has less overhead.
 
 ## Example 3 - A JavaScript Example
 
