--- a/frontend/tips/1-upload-a-file/_java.mdx
+++ b/frontend/tips/1-upload-a-file/_java.mdx
@@ -15,7 +15,7 @@ driving the browser with Selenium (e.g., `org.openqa.selenium.WebDriver`, etc.),
 ### Setup and Teardown
 
 Lines 15 to 25 are setting up and tearing down the browser instance. The `beforeEach` method, will execute before
-each test. In it we are launching a new instance of Firefox with Selenium and storing it in a class variable that
+each test. In it, we are launching a new instance of Firefox with Selenium and storing it in a class variable that
 we'll use throughout all tests. After our test executes the second method, `afterEach`, will execute. This calls
 `driver.quit()` which ends the session by closing the browser instance.
 
