--- a/frontend/tips/12-opt-out-of-ab-tests/_javascript.mdx
+++ b/frontend/tips/12-opt-out-of-ab-tests/_javascript.mdx
@@ -65,7 +65,7 @@ We could also load the opt-out cookie before navigating to this page.
 // ...
 ```
 
-Here we are navigating to the main page of the site first and then adding the opt-out cookie. After that we navigate to the split test page and then perform our check. Alternatively, we could opt out without forging a cookie. Instead we just need to append an opt out parameter to the URL.
+Here we are navigating to the main page of the site first and then adding the opt-out cookie. After that we navigate to the split test page and then perform our check. Alternatively, we could opt out without forging a cookie. Instead, we just need to append an opt out parameter to the URL.
 
 ```javascript
 // filename: test/abOptOut.spec.js
