--- a/frontend/tips/3-work-with-frames/_javascript.mdx
+++ b/frontend/tips/3-work-with-frames/_javascript.mdx
@@ -14,7 +14,7 @@ browser with Selenium (e.g., `const {Builder, By} = require("selenium-webdriver"
 After creating a `describe` to group our tests (e.g., `describe("Frame Test")...`), lines 5 to 13 are setting up and
 tearing down the browser instance.
 
-The `beforeEach` method, will execute before each test. In it we are launching a new instance of Firefox with
+The `beforeEach` method, will execute before each test. In it, we are launching a new instance of Firefox with
 Selenium and storing it in a class variable that we'll use throughout all tests. After our test executes the second
 method, `afterEach`, will execute. This calls `driver.quit()` which ends the session by closing the browser instance.
 
