--- a/frontend/tips/6-open-new-window/_javascript.mdx
+++ b/frontend/tips/6-open-new-window/_javascript.mdx
@@ -16,7 +16,7 @@ driving the browser with Selenium (e.g., `const {Builder} = require("selenium-we
 After creating a `describe` to group our tests (e.g., `describe("New Window and New Tab")...`), the following lines
 are setting up and tearing down the browser instance.
 
-The `beforeEach` method, will execute before each test. In it we are launching a new instance of Firefox with
+The `beforeEach` method, will execute before each test. In it, we are launching a new instance of Firefox with
 Selenium and storing it in a class variable that we'll use throughout all tests. After our test executes the second
 method, `afterEach`, will execute. This calls `driver.quit()` which ends the session by closing the browser instance.
 
