--- a/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
+++ b/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
@@ -22,7 +22,7 @@ category:
 
 ## Intro
 
-On occasion you'll come across functionality that requires the use of keyboard key presses in your tests.
+On occasion, you'll come across functionality that requires the use of keyboard key presses in your tests.
 
 Perhaps you'll need to tab to traverse from one portion of the page to another, back out of some kind of menu or
 overlay with the escape key, or even submit a form with Enter.
