fix typo: "A period is needed after the abbreviation 'etc.'" (suggested by IDEA)

--- a/frontend/tips/10-retry-test-actions/main.mdx
+++ b/frontend/tips/10-retry-test-actions/main.mdx
@@ -20,7 +20,7 @@ category:
 
 We all write tests with the best intention of having them pass and, when they fail, to reveal legitimate issues in
 the application we're testing. But that's not always easy to accomplish. Especially when your application is dependent
-upon third-party service providers (e.g. payment providers, social networks, etc).
+upon third-party service providers (e.g. payment providers, social networks, etc.).
 
 ## A Solution
 
