--- a/frontend/tips/12-opt-out-of-ab-tests/main.mdx
+++ b/frontend/tips/12-opt-out-of-ab-tests/main.mdx
@@ -34,7 +34,7 @@ First, here is a primer on Split Testing.
 > engagement. A simple example would be testing variations of an e-mail landing page to see if more people sign up.
 > In such a split test there would be the control (how the application looks and behaves now) and variants (e.g., 2
 > or 3 changes that could include changing text or images on the page, element positioning, color of the submit
-> button, etc). Once the variants are configured, they are put into rotation, and the experiment starts. During this
+> button, etc.). Once the variants are configured, they are put into rotation, and the experiment starts. During this
 > experiment each user will see a different version of the feature and their engagement with it will be tracked. Split
 > tests live for the length of the experiment or until a winner is found (e.g., tracking indicates that a variant
 > converted higher than the control). If no winner is found, new variants may be created and another experiment tried.
