--- a/frontend/tips/19-data-driven-testing/main.mdx
+++ b/frontend/tips/19-data-driven-testing/main.mdx
@@ -32,7 +32,7 @@ tests can be burdensome and rife with copied code, which can make it hard to mai
 Enter Data-driven Testing.
 
 By storing your desired inputs and expected outcomes in a central repository of some kind (e.g. a comma separated
-file, database, etc) you can easily wire up tests to use each of them instead of writing numerous tests and
+file, database, etc.) you can easily wire up tests to use each of them instead of writing numerous tests and
 hard-coding these values directly in your test code.
 
 
