--- a/frontend/tips/29-chrome-driver/main.mdx
+++ b/frontend/tips/29-chrome-driver/main.mdx
@@ -27,7 +27,7 @@ different browser like Chrome, you quickly run into configuration overhead that 
 lacking in code examples for getting started.
 
 With the introduction of WebDriver (circa Selenium 2) a lot of benefits were realized (e.g. more effective &
-faster browser execution, no more single host origin issues, etc). But with it came some architectural & configuration
+faster browser execution, no more single host origin issues, etc.). But with it came some architectural & configuration
 differences that may not be widely known. Namely -- browser drivers.
 
 ## A Solution
