--- a/frontend/tips/22-locator-strategy/_ruby.mdx
+++ b/frontend/tips/22-locator-strategy/_ruby.mdx
@@ -102,7 +102,7 @@ In a perfect world all pages would be written with sound markup and uniquely nam
 
 As far as finding CSS Selectors, the simplest way to find them is to inspect the elements on a page. The best way to do this is from within your web browser. Fortunately popular browsers of today come pre-loaded with development tools that make this simple to accomplish.
 
-When viewing the page, right click on the element you want to interact with and click __Inspect Element__. This will bring up a small window with all the HTML for the page but zoomed into your selection highlighted. From here you can see if there are unique attributes you can work with (e.g. `id`, `class`, etc). At the bottom of the window a set of selectors will be listed showing you the selector for your selection and a hierarchy of the selectors on the page that lead up to your selection.
+When viewing the page, right click on the element you want to interact with and click __Inspect Element__. This will bring up a small window with all the HTML for the page but zoomed into your selection highlighted. From here you can see if there are unique attributes you can work with (e.g. `id`, `class`, etc.). At the bottom of the window a set of selectors will be listed showing you the selector for your selection and a hierarchy of the selectors on the page that lead up to your selection.
 
 From here you should be able to construct a CSS Selector to use in a test.
 
