fix typo: "outside of the FOO" -> "outside the FOO" (suggested by IDEA)

--- a/frontend/tips/3-work-with-frames/_ruby.mdx
+++ b/frontend/tips/3-work-with-frames/_ruby.mdx
@@ -38,7 +38,7 @@ Once the page loads we switch into the frame that contains TinyMCE and...
 + grab the new text value
 + assert that the original and new texts are not the same
 
-Keep in mind that if we need to access a part of the page outside of the frame we are currently in we'll need to
+Keep in mind that if we need to access a part of the page outside the frame we are currently in we'll need to
 switch to it. Thankfully Selenium has a method that enables us to quickly jump back to the top level of the page --
 `switch_to.default_content`.
 
