--- a/frontend/tips/36-available-resources/main.mdx
+++ b/frontend/tips/36-available-resources/main.mdx
@@ -94,7 +94,7 @@ best resources around.
 + [Selenium Meetup Talks](https://youtube.com/playlist?list=PL67l1VPxOnT4BwuKRmt_INeMd0_jtUhDt)
 
 Some Selenium Meetups take it upon themselves to record their talks and publish them afterwards. Here are some of
-them. They are a great way to see what other pockets of the community are up to (outside of the annual Selenium Conf).
+them. They are a great way to see what other pockets of the community are up to (outside the annual Selenium Conf).
 
 ### Mailing Lists
 
