--- a/frontend/tips/66-blacklist/main.mdx
+++ b/frontend/tips/66-blacklist/main.mdx
@@ -23,7 +23,7 @@ There are plenty of external resources that get loaded onto a page that aren't d
 functionality you're testing (e.g., Facebook widgets, Analytics, JavaScript snippets, etc.). And these external
 resources have the potential to negatively impact your test runs due to slow load times.
 
-So how do you protect your tests from these things that are outside of your control?
+So how do you protect your tests from these things that are outside your control?
 
 ## A Solution
 
