--- a/frontend/tips/3-work-with-frames/_javascript.mdx
+++ b/frontend/tips/3-work-with-frames/_javascript.mdx
@@ -38,7 +38,7 @@ Here is a more likely example you'll run into -- working with a
 <abbr title="What You See Is What You Get">WYSIWYG</abbr> Editor like
 [TinyMCE](http://www.tinymce.com/). You can see the page we're testing [here](http://the-internet.herokuapp.com/tinymce).
 
-Keep in mind that if we need to access a part of the page outside of the frame we are currently in we'll need to
+Keep in mind that if we need to access a part of the page outside the frame we are currently in we'll need to
 switch to it. Thankfully Selenium has method that enables us to quickly jump back to the top level of the page
 -- `switchTo.defaultContent()`.
 
