--- a/frontend/tips/7-use-a-page-object/_ruby.mdx
+++ b/frontend/tips/7-use-a-page-object/_ruby.mdx
@@ -81,7 +81,7 @@ swapping out the hard-coded CSS locators for our new CSS locator constant variab
 
 At the bottom of the class we have private helper methods. These methods aren't necessarily specific to the page
 this class represents, but they are useful for it to function. So we want to access them within the class, but
-make it so that they're not available outside of the class. Using the private classification gets us this behavior nicely.
+make it so that they're not available outside the class. Using the private classification gets us this behavior nicely.
 
 And lastly, we update the `displayed?` private method to take a single argument for a 'locator' object (e.g. one of
 our CSS locator constant variables).
