fix typo: "whether or not FOO" -> "whether FOO" (suggested by IDEA)

--- a/frontend/tips/40-disabled-element/_javascript.mdx
+++ b/frontend/tips/40-disabled-element/_javascript.mdx
@@ -65,6 +65,6 @@ When we save this file and run it (e.g., `mocha` from the command-line) here is 
 
 ## Summary
 
-Hopefully this tip has helped make the task of seeing whether or not an element is enabled or disabled more approachable.
+Hopefully this tip has helped make the task of seeing whether an element is enabled or disabled more approachable.
 
 Happy Testing!
