--- a/frontend/tips/40-disabled-element/_ruby.mdx
+++ b/frontend/tips/40-disabled-element/_ruby.mdx
@@ -54,6 +54,6 @@ If you save this file and run it (e.g., `ruby dropdown_disabled.rb` from the com
 
 ## Summary
 
-Hopefully this tip has helped make the task of seeing whether or not an element is enabled or disabled more approachable.
+Hopefully this tip has helped make the task of seeing whether an element is enabled or disabled more approachable.
 
 Happy Testing!
