--- a/frontend/tips/40-disabled-element/_csharp.mdx
+++ b/frontend/tips/40-disabled-element/_csharp.mdx
@@ -59,6 +59,6 @@ When you save this file and run it (e.g., `nunit3-console.exe .\DisabledElements
 
 ## Summary
 
-Hopefully this tip has helped make the task of seeing whether or not an element is enabled or disabled more approachable.
+Hopefully this tip has helped make the task of seeing whether an element is enabled or disabled more approachable.
 
 Happy Testing!
