--- a/frontend/tips/40-disabled-element/_python.mdx
+++ b/frontend/tips/40-disabled-element/_python.mdx
@@ -65,6 +65,6 @@ When we save this file and run it (e.g., `python disabled_elements.py` from the 
 
 ## Summary
 
-Hopefully this tip has helped make the task of seeing whether or not an element is enabled or disabled more approachable.
+Hopefully this tip has helped make the task of seeing whether an element is enabled or disabled more approachable.
 
 Happy Testing!
