fix typo: "repeated word" (suggested by IDEA)

--- a/frontend/tips/22-locator-strategy/main.mdx
+++ b/frontend/tips/22-locator-strategy/main.mdx
@@ -21,7 +21,7 @@ category:
 ## Intro
 
 In web design CSS (Cascading Style Sheets) is used to apply styles to the markup (HTML) on a page. CSS is able to do
-this by declaring which bits of the the markup it wants to interact with through the use of selectors. Selenium
+this by declaring which bits of the markup it wants to interact with through the use of selectors. Selenium
 operates in a similar manner but instead of changing the style of elements it interacts with them by clicking,
 getting values from, typing, sending keys, etc.
 
