--- a/frontend/tips/63-right-click/_javascript.mdx
+++ b/frontend/tips/63-right-click/_javascript.mdx
@@ -23,7 +23,7 @@ describe("Right click", function() {
 
 Now we're ready to write our test.
 
-We'll use an example from [the-internet](https://github.com/saucelabs/the-internet) that will trigger a JavaScript alert when when we right-click on a specific area of the page ([link](http://the-internet.herokuapp.com/context_menu)). It will say `You selected a context menu`. We'll grab this text and use it to assert that the menu was actually triggered.
+We'll use an example from [the-internet](https://github.com/saucelabs/the-internet) that will trigger a JavaScript alert when we right-click on a specific area of the page ([link](http://the-internet.herokuapp.com/context_menu)). It will say `You selected a context menu`. We'll grab this text and use it to assert that the menu was actually triggered.
 
 ```javascript
 // filename: test/right-click.spec.js
