--- a/frontend/tips/8-download-a-file-revisited/_csharp.mdx
+++ b/frontend/tips/8-download-a-file-revisited/_csharp.mdx
@@ -53,7 +53,7 @@ Once we receive the response we check its header for the content type (e.g., `As
 
 ## Expected Behavior
 
-When you save this and run it (e.g., `nunit3-console.exe .\FileDownloadRevisited.sln` from the command-line) here is what will will happen:
+When you save this and run it (e.g., `nunit3-console.exe .\FileDownloadRevisited.sln` from the command-line) here is what will happen:
 
 - Open the browser
 - Load the page
