--- a/frontend/tips/8-download-a-file-revisited/_python.mdx
+++ b/frontend/tips/8-download-a-file-revisited/_python.mdx
@@ -50,7 +50,7 @@ Once we receive the response we can check its header for the `Content-type` and 
 
 ## Expected Behavior
 
-When you save this and run it (e.g., `python file_download_revisited.py` from the command-line) here is what will will happen:
+When you save this and run it (e.g., `python file_download_revisited.py` from the command-line) here is what will happen:
 
 + Open the browser
 + Load the page
