--- a/frontend/tips/8-download-a-file-revisited/_ruby.mdx
+++ b/frontend/tips/8-download-a-file-revisited/_ruby.mdx
@@ -43,7 +43,7 @@ Once we receive the response we can check it's header for the `content_type` and
 
 ## Expected Behavior
 
-If you save this and run it (e.g., `ruby download_revisited.rb` from the command-line) here is what will will happen:
+If you save this and run it (e.g., `ruby download_revisited.rb` from the command-line) here is what will happen:
 
 - Open the browser
 - Load the page
