--- a/frontend/tips/8-download-a-file-revisited/_java.mdx
+++ b/frontend/tips/8-download-a-file-revisited/_java.mdx
@@ -63,7 +63,7 @@ Once we receive the response we check it's header for the content type (e.g., `r
 
 ## Expected Behavior
 
-When you save this and run it (e.g., `mvn clean install` from the command-line) here is what will will happen:
+When you save this and run it (e.g., `mvn clean install` from the command-line) here is what will happen:
 
 + Open the browser
 + Load the page
