add links to javadoc and blog post about downloading algorithms

--- a/frontend/tips/2-download-a-file/_selenide.mdx
+++ b/frontend/tips/2-download-a-file/_selenide.mdx
@@ -39,7 +39,7 @@ Under the hood, Selenide does all the needed job for downloading files:
   * waits until the file arises in the downloads folder
   * etc.
 
-Also, Selenide has several algorithms for downloading the file:
+Also, Selenide has several [algorithms for downloading the file](https://selenide.org/javadoc/current/com/codeborne/selenide/FileDownloadMode.html):
   * HTTPGET (the default one)
   * FOLDER
   * CDP
@@ -47,7 +47,9 @@ Also, Selenide has several algorithms for downloading the file:
 
 ### For more details
 
-See https://www.youtube.com/watch?v=GwHG550moGc&ab_channel=AndreiSolntsev
+See
+* this video: https://www.youtube.com/watch?v=GwHG550moGc&ab_channel=AndreiSolntsev, or
+* this blog post: https://selenide.org/2019/12/10/advent-calendar-download-files/
 
 ### Executing the Test
 
